cmake_minimum_required(VERSION 3.20)
project(Offer)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(1 1.cpp)

add_executable(2 2.cpp)

add_executable(3 3.cpp)

add_executable(4 4.cpp)

add_executable(5 5.cpp)

add_executable(6 6.cpp)

add_executable(7 7.cpp)

add_executable(8 8.cpp)

add_executable(9 9.cpp)

add_executable(10 10.cpp)

add_executable(11 11.cpp)

add_executable(12 12.cpp)

add_executable(13 13.cpp)

add_executable(14 14.cpp)

add_executable(15 15.cpp)

add_executable(16 16.cpp)

add_executable(17 17.cpp)

add_executable(18 18.cpp)

add_executable(19 19.cpp)

add_executable(20 20.cpp)

add_executable(21 21.cpp)

add_executable(22 22.cpp)

add_executable(24 24.cpp)

add_executable(25 25.cpp)

add_executable(26 26.cpp)

add_executable(27 27.cpp)

add_executable(28 28.cpp)

add_executable(37 37.cpp)

add_executable(39 39.cpp)
